[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/hud/hud.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/AlegreyaSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/hud/hud_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/fonts/AlegreyaSans-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectLevelButton" type="MenuButton" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -99.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "Select Level"
flat = false
items = [ "Level 0", null, 0, false, false, 0, 0, null, "", false, "Level 1", null, 0, false, false, 1, 0, null, "", false, "Level 2", null, 0, false, false, 2, 0, null, "", false, "Level 3", null, 0, false, false, 3, 0, null, "", false, "Level 4", null, 0, false, false, 4, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -420.0
margin_top = -220.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedUnitLabel" type="Label" parent="Control/Panel/VBoxContainer"]
margin_right = 380.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "Nothing selected"
align = 1

[node name="InfoContainer" type="MarginContainer" parent="Control/Panel/VBoxContainer"]
margin_top = 29.0
margin_right = 380.0
margin_bottom = 145.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EndTurnButton" type="Button" parent="Control/Panel/VBoxContainer"]
margin_top = 149.0
margin_right = 380.0
margin_bottom = 180.0
size_flags_horizontal = 3
text = "End Turn (Space)"

[node name="HelpText" type="RichTextLabel" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -120.0
margin_right = 820.0
margin_bottom = -20.0
bbcode_enabled = true
bbcode_text = "[center]Help
line 1
line 2[/center]"
text = "Help
line 1
line 2"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/Panel/VBoxContainer/EndTurnButton" to="." method="_on_EndTurnButton_pressed"]
